--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -3,6 +3,14 @@ vi:
     finances:
       backend:
         services:
+          create:
+            success: "Thêm dịch vụ thành công."
+          update:
+            success: "Cập nhật dịch vụ thành công."
+          destroy:
+            success: "Xóa dịch vụ thành công."
+          delete_all:
+            success: "Xóa dịch vụ được chọn thành công."
           index:
             services: "Danh sách dịch vụ"
             create: "Thêm dịch vụ"
@@ -10,6 +18,7 @@ vi:
             delete: "Xóa dịch vụ"            
           list:
             name: "Tên dịch vụ"
+            custom_order: "Sắp xếp"
             delete: "Xóa dịch vụ"
             no_matching_records_found: "Danh sách dịch vụ hiện tại đang trống."
           new:
@@ -18,9 +27,10 @@ vi:
           edit:
             services: "Danh sách dịch vụ"
             create: "Thêm dịch vụ"
-          form:
+          form:            
             image_url: "Hình ảnh chính"
-            service_icon: "Icon dịch vụ"
+            icon: "Icon dịch vụ"
+            enter_icon: "Dán thẻ FA Icon dịch vụ"
             name: "Tên dịch vụ"
             enter_name: "Nhập tên dịch vụ"
             service_is_home: "Dịch vụ nổi bật"
